--- a/incmaker/IncMakerTC3D.ui
+++ b/incmaker/IncMakerTC3D.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1034</width>
-    <height>821</height>
+    <width>1197</width>
+    <height>1000</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,8 +16,8 @@
   <widget class="Line" name="line">
    <property name="geometry">
     <rect>
-     <x>840</x>
-     <y>60</y>
+     <x>1010</x>
+     <y>160</y>
      <width>161</width>
      <height>20</height>
     </rect>
@@ -29,8 +29,8 @@
   <widget class="QPushButton" name="Quit">
    <property name="geometry">
     <rect>
-     <x>840</x>
-     <y>730</y>
+     <x>1000</x>
+     <y>720</y>
      <width>98</width>
      <height>27</height>
     </rect>
@@ -44,8 +44,8 @@
     <rect>
      <x>5</x>
      <y>5</y>
-     <width>760</width>
-     <height>760</height>
+     <width>980</width>
+     <height>980</height>
     </rect>
    </property>
    <property name="palette">
@@ -476,51 +476,22 @@
   <widget class="QLabel" name="label_2">
    <property name="geometry">
     <rect>
-     <x>830</x>
-     <y>780</y>
-     <width>201</width>
-     <height>20</height>
+     <x>1010</x>
+     <y>770</y>
+     <width>161</width>
+     <height>81</height>
     </rect>
    </property>
    <property name="text">
-    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;© Johannes Helmes 2015&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;© Johannes Helmes &lt;/p&gt;&lt;p&gt;2016&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
-  </widget>
-  <widget class="QWidget" name="layoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>830</x>
-     <y>10</y>
-     <width>181</width>
-     <height>36</height>
-    </rect>
-   </property>
-   <layout class="QHBoxLayout" name="horizontalLayout">
-    <item>
-     <widget class="QLabel" name="label">
-      <property name="text">
-       <string>L</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QSpinBox" name="LValue"/>
-    </item>
-    <item>
-     <widget class="QPushButton" name="Create">
-      <property name="text">
-       <string>Create Dummy</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
   </widget>
   <widget class="QPushButton" name="Change21">
    <property name="geometry">
     <rect>
-     <x>840</x>
+     <x>1000</x>
      <y>570</y>
-     <width>132</width>
+     <width>161</width>
      <height>27</height>
     </rect>
    </property>
@@ -531,8 +502,8 @@
   <widget class="QSpinBox" name="PlaneNo">
    <property name="geometry">
     <rect>
-     <x>920</x>
-     <y>106</y>
+     <x>1090</x>
+     <y>216</y>
      <width>57</width>
      <height>21</height>
     </rect>
@@ -541,8 +512,8 @@
   <widget class="QSpinBox" name="IncStepNo">
    <property name="geometry">
     <rect>
-     <x>920</x>
-     <y>150</y>
+     <x>1090</x>
+     <y>260</y>
      <width>57</width>
      <height>27</height>
     </rect>
@@ -551,8 +522,8 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>850</x>
-     <y>110</y>
+     <x>1020</x>
+     <y>220</y>
      <width>64</width>
      <height>17</height>
     </rect>
@@ -564,8 +535,8 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>850</x>
-     <y>160</y>
+     <x>1020</x>
+     <y>270</y>
      <width>64</width>
      <height>17</height>
     </rect>
@@ -577,9 +548,9 @@
   <widget class="QPushButton" name="CopyPlane">
    <property name="geometry">
     <rect>
-     <x>840</x>
+     <x>1000</x>
      <y>620</y>
-     <width>161</width>
+     <width>181</width>
      <height>27</height>
     </rect>
    </property>
@@ -590,9 +561,9 @@
   <widget class="QPushButton" name="CopyIncStep">
    <property name="geometry">
     <rect>
-     <x>840</x>
+     <x>1000</x>
      <y>670</y>
-     <width>161</width>
+     <width>201</width>
      <height>27</height>
     </rect>
    </property>
@@ -603,8 +574,8 @@
   <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>829</x>
-     <y>209</y>
+     <x>1000</x>
+     <y>320</y>
      <width>181</width>
      <height>211</height>
     </rect>
@@ -633,6 +604,51 @@
        <string>Save</string>
       </property>
      </widget>
+    </item>
+   </layout>
+  </widget>
+  <widget class="QPushButton" name="Create">
+   <property name="geometry">
+    <rect>
+     <x>1010</x>
+     <y>120</y>
+     <width>142</width>
+     <height>30</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Create Dummy</string>
+   </property>
+  </widget>
+  <widget class="QWidget" name="gridLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>1010</x>
+     <y>20</y>
+     <width>160</width>
+     <height>80</height>
+    </rect>
+   </property>
+   <layout class="QGridLayout" name="gridLayout">
+    <item row="0" column="1">
+     <widget class="QSpinBox" name="LValue"/>
+    </item>
+    <item row="0" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>L</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_5">
+      <property name="text">
+       <string>W</string>
+      </property>
+     </widget>
+    </item>
+    <item row="1" column="1">
+     <widget class="QSpinBox" name="WValue"/>
     </item>
    </layout>
   </widget>
